--- a/Technofit/etc/Technofit.ini
+++ b/Technofit/etc/Technofit.ini
@@ -34,7 +34,7 @@ cookieComment=Identifies the user
 
 [logging]
 ; The logging settings become effective after you comment in the related lines of code in main.cpp.
-fileName=../logs/demo1.log
+fileName=../logs/Technofit.log
 minLevel=WARNING
 bufferSize=100
 maxSize=1000000
