Added tests to server part

--- a/Technofit/CMakeLists.txt
+++ b/Technofit/CMakeLists.txt
@@ -3,15 +3,12 @@ project("QtWebApp Technofit")
 
 set(CMAKE_AUTOMOC ON)
 
-#find_package(QtWebApp REQUIRED COMPONENTS HttpServer Logging TemplateEngine)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED HINTS $ENV{Qt6_DIR} $ENV{Qt5_DIR})
 find_package(Qt6 COMPONENTS Core5Compat REQUIRED)
-#find_package(Qt6 COMPONENTS Core Network REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Network REQUIRED)
 if (${QT_VERSION_MAJOR} EQUAL 6)
     find_package(Qt6 COMPONENTS Core5Compat REQUIRED)
 endif()
-
 
 add_executable(Technofit
 	controller/dumpcontroller.cpp
@@ -36,7 +33,6 @@ add_executable(Technofit
 	Handlers/IHandler.h
 	Handlers/DataHandlers.h
 	Handlers/DataHandlers.cpp
-	UseCase/IServerDatabase.h
 	UseCase/IServerUsecase.h
 	UseCase/ServerUsecase.h
 	UseCase/ServerUsecase.cpp
@@ -54,6 +50,28 @@ add_executable(Technofit
 	../IResponse.h
 )
 
+add_executable(TechnofitTest
+	main_test.cpp
+	Handlers/DataHandlers.h
+	Handlers/DataHandlers.cpp
+	Handlers/DataHandlerTests.cpp
+	Database/IRepository.h
+	Database/Repository.h
+	Database/Repository.cpp
+	Database/RepositoryTests.cpp
+	Database/IDataBaseDriver.h
+	Database/DataBaseDriver.h
+	Database/DataBaseDriver.cpp
+	Database/DataBaseDriverTests.cpp
+	UseCase/IServerUsecase.h
+	UseCase/ServerUsecase.h
+	UseCase/ServerUsecase.cpp
+	UseCase/ServerUsecaseTests.cpp
+	../IRequest.h
+	../IResponse.h
+)
+
+target_link_libraries(TechnofitTest -lgtest -lgmock)
 target_link_libraries(Technofit QtWebAppGlobal QtWebAppLogging QtWebAppHttpServer QtWebAppTemplateEngine)
 target_include_directories(Technofit PUBLIC ../QtWebApp/httpserver ../QtWebApp/logging ../QtWebApp/templateengine ../QtWebApp)
 target_link_libraries(Technofit Qt${QT_VERSION_MAJOR}::Core)
@@ -61,6 +79,7 @@ target_link_libraries(Technofit Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR
 if (${QT_VERSION_MAJOR} EQUAL 6)
     target_link_libraries(Technofit Qt6::Core5Compat)
 endif()
+
 
 
 
